--- a/AutoPiAndroid/src/main/AndroidManifest.xml
+++ b/AutoPiAndroid/src/main/AndroidManifest.xml
@@ -37,11 +37,15 @@
         </activity>
         <activity
             android:name="com.manpreet.autopi.LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="stateVisible|adjustPan">
         </activity>
         <activity
             android:name="com.manpreet.autopi.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/app_name"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:windowSoftInputMode="adjustPan">
         </activity>
 
         <meta-data
